<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro__usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/lightbackroundActivity"
    tools:context="com.example.lkdml.tp_buffete.registro.Registro_Usuario">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RU_Titilo"
        android:gravity="center"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RU_Descripcion"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/RU_Nombre"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RU_Nombre_hint"
            android:background="@color/colorEditTextBackground"
            android:maxLines="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/RU_Apellido"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RU_Apellido_hint"
            android:background="@color/colorEditTextBackground"
            android:maxLines="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/RU_Dni"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RU_Dni_hint"
            android:background="@color/colorEditTextBackground"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="8"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/RU_Mail"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RU_Mail_hint"
            android:background="@color/colorEditTextBackground"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/RU_Clave"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RU_Clave_hint"
            android:background="@color/colorEditTextBackground"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="15"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/RU_Reingrese"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RU_Reingrese_hint"
            android:background="@color/colorEditTextBackground"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="15"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/RU_Registrarme"
            android:textSize="15sp"
            />

    </LinearLayout>

</LinearLayout>
