<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lkdml.tp_buffete.menu.Menues">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_weight="0.5"
                    android:text="@string/Pedido_ImporteEstimado"/>

                <TextView
                    android:id="@+id/P_importe"
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="$ 0,00"/>
            </LinearLayout>
            <View style="@style/Divider"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Pedido_Unidades_Totales"/>
                <TextView
                    android:id="@+id/P_elementos"
                    android:paddingStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pedido_EnviarPedido"
            android:id="@+id/P_enviar"
            />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/RV_pedido">

    </android.support.v7.widget.RecyclerView>




</LinearLayout>
